--- a/trunk/Css.Data/Css.Data.csproj
+++ b/trunk/Css.Data/Css.Data.csproj
@@ -10,6 +10,7 @@
     <PackageProjectUrl>https://github.com/CSharpStudio/Data</PackageProjectUrl>
     <RepositoryUrl>https://github.com/CSharpStudio/Data.git</RepositoryUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageIconUrl>https://raw.githubusercontent.com/CSharpStudio/Data/master/CSharpStudio.png</PackageIconUrl>
   </PropertyGroup>
 
   <ItemGroup>
