--- a/trunk/Css.Data/Css.Data.csproj
+++ b/trunk/Css.Data/Css.Data.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <RootNamespace>Css</RootNamespace>
+    <RootNamespace>Css.Data</RootNamespace>
     <Authors>Eric Leung</Authors>
     <Company>www.CSharpStudio.org</Company>
     <Description>The lib of CSharpStudio for data access.</Description>
@@ -17,8 +17,11 @@
     <PackageReference Include="Microsoft.Extensions.Configuration">
       <Version>2.0.0</Version>
     </PackageReference>
-    <PackageReference Include="NUnit">
-      <Version>3.8.1</Version>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json">
+      <Version>2.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="System.Data.OracleClient">
+      <Version>1.0.6</Version>
     </PackageReference>
     <PackageReference Include="System.Data.SqlClient">
       <Version>4.4.0</Version>
@@ -30,21 +33,22 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="Data\Properties\Resources.Designer.cs">
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="Data\Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+    <EmbeddedResource Update="Properties\Resources.resx">
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <Generator>ResXFileCodeGenerator</Generator>
     </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Data\" />
     <Folder Include="Properties\" />
   </ItemGroup>
 
