--- a/trunk/Css.Tests/Css.Tests.csproj
+++ b/trunk/Css.Tests/Css.Tests.csproj
@@ -7,19 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="AppSettings.config" />
     <None Remove="config.json" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="AppSettings.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="config.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json">
-      <Version>2.0.0</Version>
-    </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0-preview-20170810-02" />
     <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
