--- a/trunk/Css.Data/Css.Data.csproj
+++ b/trunk/Css.Data/Css.Data.csproj
@@ -14,6 +14,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Data\**" />
+    <EmbeddedResource Remove="Data\**" />
+    <None Remove="Data\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="System.Data.OracleClient">
       <Version>1.0.6</Version>
     </PackageReference>
@@ -42,7 +48,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
     <Folder Include="Properties\" />
   </ItemGroup>
 
