--- a/trunk/Css.Core/Css.Core.csproj
+++ b/trunk/Css.Core/Css.Core.csproj
@@ -26,6 +26,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Data\OrderDirection.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Include="%28Extensions%29\CollectionExtension.cs" />
     <Compile Include="%28Extensions%29\CommonExtension.cs" />
     <Compile Include="%28Extensions%29\StringExtension.cs" />
