--- a/trunk/Css.Tests/Css.Tests.csproj
+++ b/trunk/Css.Tests/Css.Tests.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <SignAssembly>false</SignAssembly>
+
+    <AssemblyOriginatorKeyFile>Css.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
