重构 Data 和 Domain，Css.Domain不依赖于Css.Data

--- a/trunk/Css.ServiceHost/appsettings.json
+++ b/trunk/Css.ServiceHost/appsettings.json
@@ -11,5 +11,19 @@
         "Default": "Warning"
       }
     }
+  },
+  "_sections": {
+    "ConnectionStrings": {
+      "DbMes": {
+        "Name": "DbMes",
+        "ConnectionString": "DataSource=",
+        "ProviderName": "System.Data.SqlClient"
+      },
+      "DbMaster": {
+        "ConnectionString": "DataSource=",
+        "Name": "DbMaster",
+        "ProviderName": "System.Data.SqlClient"
+      }
+    }
   }
 }
